--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "babel-plugin-macros": "^3.1.0",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3"
   }
