--- a/package.json
+++ b/package.json
@@ -9,21 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "autoprefixer": "^10.4.13",
     "aws-sdk": "^2.1332.0",
     "next": "13.2.3",
     "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-multi-carousel": "^2.8.2",
     "swr": "^2.1.0",
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.3.0",
-    "@fortawesome/free-regular-svg-icons": "^6.3.0",
-    "@fortawesome/free-solid-svg-icons": "^6.3.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "babel-plugin-macros": "^3.1.0",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3"
   }
