--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.13",
+    "@tinymce/tinymce-react": "^4.3.0",
     "aws-sdk": "^2.1332.0",
+    "axios": "^1.3.4",
+    "cookie": "^0.5.0",
+    "ioredis": "^5.3.1",
     "next": "13.2.3",
-    "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swr": "^2.1.0",
-    "tailwindcss": "^3.2.7"
+    "swr": "^2.1.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
     "eslint": "8.35.0",
-    "eslint-config-next": "13.2.3"
+    "eslint-config-next": "13.2.3",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
