--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "18.2.0",
     "react-multi-carousel": "^2.8.2",
     "swr": "^2.1.0",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "tw-elements": "^1.0.0-beta1"
   },
   "devDependencies": {
     "eslint": "8.35.0",
