--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@tinymce/tinymce-react": "^4.3.0",
+    "@upstash/redis": "^1.20.1",
     "aws-sdk": "^2.1332.0",
     "axios": "^1.3.4",
     "cookie": "^0.5.0",
-    "ioredis": "^5.3.1",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
