--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "autoprefixer": "^10.4.13",
     "aws-sdk": "^2.1332.0",
+    "i18next": "^22.4.13",
     "next": "13.2.3",
     "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.2.0",
     "react-multi-carousel": "^2.8.2",
     "swr": "^2.1.0",
     "tailwindcss": "^3.2.7",
