--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "autoprefixer": "^10.4.13",
-    "aws-sdk": "^2.1332.0",
-    "i18next": "^22.4.13",
+    "@themesberg/flowbite": "^1.3.0",
     "@tinymce/tinymce-react": "^4.3.0",
     "@upstash/redis": "^1.20.1",
+    "autoprefixer": "^10.4.13",
+    "aws-sdk": "^2.1332.0",
     "axios": "^1.3.4",
     "cookie": "^0.5.0",
+    "daisyui": "^2.51.5",
+    "i18next": "^22.4.13",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -33,6 +35,7 @@
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "postcss": "^8.4.21",
+    "postcss-nesting": "^11.2.2",
     "tailwindcss": "^3.2.7"
   }
 }
