--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.2.0",
+    "react-icons": "^4.8.0",
     "react-multi-carousel": "^2.8.2",
     "swr": "^2.1.0",
     "tailwindcss": "^3.2.7",
