--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cookie": "^0.5.0",
     "daisyui": "^2.51.5",
     "i18next": "^22.4.13",
+    "jquery": "^3.6.4",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
